--- a/ui/app/components/ui/button/buttons.scss
+++ b/ui/app/components/ui/button/buttons.scss
@@ -2,12 +2,12 @@
   Buttons
  */
 
-$hover-secondary: #B0D7F2;
-$hover-default: #B3B3B3;
-$hover-confirm: #0372C3;
-$hover-red: #FEB6BF;
-$hover-red-primary: #C72837;
-$hover-orange: #FFD3B5;
+$hover-secondary: #b0d7f2;
+$hover-default: #b3b3b3;
+$hover-confirm: #0372c3;
+$hover-red: #feb6bf;
+$hover-red-primary: #c72837;
+$hover-orange: #ffd3b5;
 
 %button {
   @include h6;
@@ -15,19 +15,19 @@ $hover-orange: #FFD3B5;
   font-weight: 500;
   font-family: Roboto, Arial;
   line-height: 1.25rem;
-  padding: .75rem 1rem;
+  padding: 0.75rem 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
   border-radius: 6px;
   width: 100%;
-  transition: border-color .3s ease, background-color .3s ease;
+  transition: border-color 0.3s ease, background-color 0.3s ease;
 
   &--disabled,
   &[disabled] {
     cursor: auto;
-    opacity: .5;
+    opacity: 0.5;
     pointer-events: none;
   }
 }
@@ -161,7 +161,7 @@ $hover-orange: #FFD3B5;
   }
 
   &:active {
-    background: #FBFBFC;
+    background: #fbfbfc;
     border-color: $Grey-500;
   }
 
@@ -220,25 +220,25 @@ $hover-orange: #FFD3B5;
 .btn--first-time {
   height: 54px;
   width: 198px;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .14);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.14);
   color: $white;
   font-size: 1.25rem;
   font-weight: 500;
   transition: 200ms ease-in-out;
-  background-color: rgba(247, 134, 28, .9);
+  background-color: rgba(70, 156, 234, 0.9);
   border-radius: 0;
 }
 
 button[disabled],
-input[type="submit"][disabled] {
+input[type='submit'][disabled] {
   cursor: not-allowed;
-  opacity: .5;
+  opacity: 0.5;
 }
 
 button.primary {
   padding: 8px 12px;
-  background: #f7861c;
-  box-shadow: 0 3px 6px rgba(247, 134, 28, .36);
+  background: #469cea;
+  box-shadow: 0 3px 6px rgba(70, 156, 234, 0.36);
   color: $white;
   font-size: 1.1em;
   font-family: Roboto;
