--- a/ui/app/components/app/home-notification/index.scss
+++ b/ui/app/components/app/home-notification/index.scss
@@ -47,7 +47,7 @@
     color: #6a737d;
   }
 
-  &__ignore-button {
+  & &__ignore-button {
     border: 2px solid #6a737d;
     box-sizing: border-box;
     border-radius: 6px;
@@ -71,7 +71,7 @@
     }
   }
 
-  &__accept-button {
+  & &__accept-button {
     border: 2px solid #6a737d;
     box-sizing: border-box;
     border-radius: 6px;
