Fix dismiss button on unconnected alert modal
Set button type to primary, rounded, and set `!important` on css class width

--- a/ui/app/components/app/alerts/unconnected-account-alert/unconnected-account-alert.scss
+++ b/ui/app/components/app/alerts/unconnected-account-alert/unconnected-account-alert.scss
@@ -20,7 +20,7 @@
     background: $primary-blue;
     color: white;
     height: 40px;
-    width: 100px;
+    width: 100px !important;
     border: 0;
     border-radius: 100px;
   }
