Update animation on toggle arrow in exhcnage-rate-display

--- a/ui/app/pages/swaps/exchange-rate-display/index.scss
+++ b/ui/app/pages/swaps/exchange-rate-display/index.scss
@@ -18,8 +18,33 @@
 
   &__switch-arrows {
     cursor: pointer;
-    margin-top: 2px;
-    transition: transform 0.5s ease-in-out;
+
+    > svg {
+      margin-top: 4px;
+    }
+  }
+
+  &__switch-arrows-rotate {
+    -webkit-animation-name: rotate-toggle;
+    -webkit-animation-duration: 1s;
+    -webkit-transition: all 500ms cubic-bezier(0.86, 0, 0.07, 1);
+    -moz-transition: all 500ms cubic-bezier(0.86, 0, 0.07, 1);
+    -o-transition: all 500ms cubic-bezier(0.86, 0, 0.07, 1);
+    transition: all 500ms cubic-bezier(0.86, 0, 0.07, 1);
+    -webkit-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+    -moz-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+    -o-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+    transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+  }
+
+  @-webkit-keyframes rotate-toggle {
+    0% {
+      -webkit-transform: rotate(0deg);
+    }
+
+    100% {
+      -webkit-transform: rotate(180deg);
+    }
   }
 
   &--white {
