--- a/ui/app/components/app/alerts/unconnected-account-alert/unconnected-account-alert.scss
+++ b/ui/app/components/app/alerts/unconnected-account-alert/unconnected-account-alert.scss
@@ -15,12 +15,7 @@
     display: flex;
     flex-direction: row;
   }
-
-  &__dismiss-button {
-    background: $primary-blue;
-    color: white;
-    height: 40px;
-  .unconnected-account-alert__footer &__dismiss-button {
+  & &__dismiss-button {
     background: $primary-blue;
     color: white;
     height: 40px;
