--- a/ui/app/pages/swaps/fee-card/index.scss
+++ b/ui/app/pages/swaps/fee-card/index.scss
@@ -2,8 +2,13 @@
   border-radius: 8px;
   border: 1px solid $Grey-100;
   width: 100%;
-  margin-top: auto;
+  margin-top: 16px;
   margin-bottom: 8px;
+
+  @media screen and (min-width: 576px) {
+    margin-top: auto;
+    margin-bottom: 0;
+  }
 
   @include H7;
 
@@ -17,10 +22,6 @@
     margin-top: 8px;
     justify-content: space-between;
 
-    @media screen and (min-width: 576px) {
-      @include H6;
-    }
-
     &:first-of-type {
       margin-top: 0;
     }
@@ -31,17 +32,23 @@
     }
   }
 
-  &__row-header-text {
-    font-weight: bold;
-    margin-right: 8px;
+  &__row-header-text,
+  &__row-header-text--bold {
+    margin-right: 6px;
     cursor: pointer;
   }
 
-  &__row {
+  &__row,
+  &__top-bordered-row {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 8px;
+  }
+
+  &__top-bordered-row {
+    border-top: 1px solid #bbc0c5;
+    padding-top: 10px;
   }
 
   &__row-label {
@@ -57,7 +64,7 @@
   }
 
   &__row-text {
-    margin-right: 8px;
+    margin-right: 0;
   }
 
   &__row-fee {
@@ -90,13 +97,28 @@
     margin-top: 4px;
   }
 
-  &__row-header-secondary {
+  &__row-header-secondary,
+  &__row-header-secondary--bold {
     color: $Grey-500;
-    margin-right: 20px;
+    margin-right: 16px;
   }
 
-  &__row-header-primary {
-    font-weight: bold;
+  &__row-header-primary,
+  &__row-header-primary--bold {
     color: $Grey-500;
+  }
+
+  &__row-header-text--bold,
+  &__row-header-secondary--bold,
+  &__row-header-primary--bold {
+    font-weight: bold;
+  }
+}
+
+.info-tooltip {
+  > div {
+    display: flex;
+    align-items: center;
+    margin-right: 4px;
   }
 }
