--- a/ui/app/components/app/confirm-page-container/confirm-detail-row/index.scss
+++ b/ui/app/components/app/confirm-page-container/confirm-detail-row/index.scss
@@ -6,7 +6,7 @@
   align-items: center;
 
   &__label {
-    font-size: .75rem;
+    font-size: 0.75rem;
     font-weight: 500;
     color: $scorpion;
     text-transform: uppercase;
@@ -21,8 +21,6 @@
   &__primary-group {
     display: flex;
     justify-content: flex-end;
-
-
   }
 
   &__primary-prefix {
@@ -44,8 +42,8 @@
   }
 
   &__header-text {
-    font-size: .75rem;
-    text-transform: uppercase;
+    font-size: 0.75rem;
+    // text-transform: uppercase;
     margin-bottom: 6px;
     color: $scorpion;
 
@@ -55,7 +53,7 @@
     }
 
     &--total {
-      font-size: .625rem;
+      font-size: 0.625rem;
     }
   }
 
