--- a/ui/app/pages/send/send.scss
+++ b/ui/app/pages/send/send.scss
@@ -30,9 +30,19 @@
 
   &__to-row {
     margin: 0;
-    padding: .5rem;
+    padding: 0.5rem;
     flex: 0 0 auto;
     background-color: $Grey-000;
+    /* border-bottom: 1px solid $alto; */
+  }
+
+  &__address-warning-row {
+    margin: 0;
+    padding: 0.5rem;
+    flex: 0 0 auto;
+    background-color: $Grey-000;
+    text-align: center;
+    color: red;
     border-bottom: 1px solid $alto;
   }
 
@@ -59,7 +69,7 @@
         background-image: url('/images/caret-left.svg');
         width: 18px;
         height: 18px;
-        margin-right: .5rem;
+        margin-right: 0.5rem;
 
         [dir='rtl'] & {
           transform: rotate(180deg);
@@ -72,9 +82,9 @@
 
       &__load-more {
         @extend %link;
-        font-size: .75rem;
+        font-size: 0.75rem;
         line-height: 1.0625rem;
-        padding: .5rem;
+        padding: 0.5rem;
         text-align: center;
         border-bottom: 1px solid $alto;
       }
@@ -88,8 +98,8 @@
       @extend %h8;
       background-color: $Grey-000;
       color: $Grey-600;
-      line-height: .875rem;
-      padding: .5rem 1rem;
+      line-height: 0.875rem;
+      padding: 0.5rem 1rem;
       border-bottom: 1px solid $alto;
 
       &:first-of-type {
@@ -97,9 +107,10 @@
       }
     }
 
-    &__group-item, &__group-item--selected {
+    &__group-item,
+    &__group-item--selected {
       @extend %row-nowrap;
-      padding: .75rem 1rem;
+      padding: 0.75rem 1rem;
       align-items: center;
       border-bottom: 1px solid $alto;
       cursor: pointer;
@@ -120,7 +131,7 @@
       }
 
       &__title {
-        font-size: .875rem;
+        font-size: 0.875rem;
         line-height: 1.25rem;
         color: $black;
       }
@@ -147,8 +158,8 @@
     width: 0;
     align-items: center;
     background: $white;
-    border-radius: .5rem;
-    padding: .75rem .5rem;
+    border-radius: 0.5rem;
+    padding: 0.75rem 0.5rem;
     border: 1px solid $Grey-100;
     transition: border-color 150ms ease-in-out;
 
@@ -158,17 +169,16 @@
 
     &__status-icon {
       @extend %bg-contain;
-      background-image: url("/images/search-black.svg");
+      background-image: url('/images/search-black.svg');
       width: 1.125rem;
       height: 1.125rem;
-      margin: .25rem .5rem .25rem .25rem;
+      margin: 0.25rem 0.5rem 0.25rem 0.25rem;
 
       &--error {
-
       }
 
       &--valid {
-        background-image: url("/images/check-green-solid.svg");
+        background-image: url('/images/check-green-solid.svg');
       }
     }
 
@@ -189,17 +199,17 @@
       cursor: pointer;
 
       &--erase {
-        background-image: url("/images/close-gray.svg");
-        width: .75rem;
-        height: .75rem;
-        margin: 0 .25rem;
+        background-image: url('/images/close-gray.svg');
+        width: 0.75rem;
+        height: 0.75rem;
+        margin: 0 0.25rem;
       }
 
       &--qrcode {
-        background-image: url("/images/qr-blue.svg");
+        background-image: url('/images/qr-blue.svg');
         width: 1.5rem;
         height: 1.5rem;
-        margin: 0 .25rem;
+        margin: 0 0.25rem;
       }
     }
 
@@ -208,13 +218,13 @@
 
       .ens-input__wrapper {
         &__status-icon {
-          background-image: url("/images/check-green-solid.svg");
+          background-image: url('/images/check-green-solid.svg');
         }
 
         &__input {
           @extend %col-nowrap;
-          font-size: .75rem;
-          line-height: .75rem;
+          font-size: 0.75rem;
+          line-height: 0.75rem;
           font-weight: 400;
           color: $Blue-500;
         }
@@ -225,13 +235,13 @@
   &__selected-input {
     &__title {
       @extend %ellipsify;
-      font-size: .875rem;
+      font-size: 0.875rem;
     }
 
     &__subtitle {
       font-size: 0.75rem;
       color: $Grey-500;
-      margin-top: .25rem;
+      margin-top: 0.25rem;
     }
   }
 }
