cleanup/response to feedback

--- a/ui/app/pages/swaps/actionable-message/index.scss
+++ b/ui/app/pages/swaps/actionable-message/index.scss
@@ -50,7 +50,7 @@
     justify-content: flex-start;
 
     .actionable-message__message {
-      color: #d73a49;
+      color: $Red-500;
     }
   }
 
