--- a/ui/app/components/app/confirm-page-container/confirm-page-container-content/index.scss
+++ b/ui/app/components/app/confirm-page-container/confirm-page-container-content/index.scss
@@ -14,17 +14,42 @@
   &__details {
     box-sizing: border-box;
     padding: 0 24px;
+    &__header {
+      margin-top: 0.75rem;
+      font-size: 0.75rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      &__sponsor-info {
+        display: flex;
+        align-items: center;
+        background-color: #ff782c;
+        color: white;
+        padding: 3px;
+        &__text {
+          margin-right: 1px;
+        }
+        .currency-display-component {
+          &__text {
+            margin: 0 2px;
+          }
+          > img {
+            display: none;
+          }
+        }
+      }
+    }
   }
 
   &__data {
-   padding: 16px;
-   color: $oslo-gray;
+    padding: 16px;
+    color: $oslo-gray;
   }
 
   &__data-box {
     background-color: #f9fafa;
     padding: 12px;
-    font-size: .75rem;
+    font-size: 0.75rem;
     margin-bottom: 16px;
     word-wrap: break-word;
     max-height: 200px;
@@ -60,7 +85,7 @@
   }
 
   &__function-type {
-    font-size: .875rem;
+    font-size: 0.875rem;
     font-weight: 500;
     text-transform: capitalize;
     color: $black;
