--- a/ui/app/components/app/gas-customization/gas-modal-page-container/index.scss
+++ b/ui/app/components/app/gas-customization/gas-modal-page-container/index.scss
@@ -32,7 +32,7 @@
 
     &__header-close-text {
       font-size: 14px;
-      color: #4EADE7;
+      color: #4eade7;
       position: absolute;
       top: 16px;
       right: 16px;
@@ -84,8 +84,8 @@
     height: 219px;
   }
 
-
-  &__info-row, &__info-row--fade {
+  &__info-row,
+  &__info-row--fade {
     width: 100%;
     background: $polar;
     padding: 15px 21px;
@@ -98,10 +98,21 @@
       padding: 4px 21px;
     }
 
-    &__send-info, &__transaction-info, &__total-info, &__fiat-total-info {
+    &__send-info,
+    &__transaction-info,
+    &__total-info,
+    &__fiat-total-info,
+    &__sponsor-info {
       display: flex;
       flex-flow: row;
       justify-content: space-between;
+    }
+
+    &__sponsor-info {
+      &__label,
+      &__value {
+        color: #ff782c;
+      }
     }
 
     &__fiat-total-info {
@@ -128,7 +139,8 @@
       }
     }
 
-    &__transaction-info, &__send-info {
+    &__transaction-info,
+    &__send-info {
       &__label {
         font-size: 12px;
       }
