--- a/ui/app/pages/swaps/awaiting-swap/index.scss
+++ b/ui/app/pages/swaps/awaiting-swap/index.scss
@@ -49,6 +49,10 @@
     > span {
       display: flex;
     }
+
+    &--invisible {
+      visibility: hidden;
+    }
   }
 
   &__time-estimate-text {
