--- a/ui/app/pages/swaps/select-quote-popover/index.scss
+++ b/ui/app/pages/swaps/select-quote-popover/index.scss
@@ -54,7 +54,11 @@
     margin-bottom: 4px;
 
     .select-quote-popover__receiving {
-      width: 104px;
+      width: 96px;
+    }
+
+    .select-quote-popover__quote-source {
+      margin-right: 60px;
     }
   }
 
@@ -137,7 +141,7 @@
   &__receiving {
     display: flex;
     flex-direction: column;
-    width: 112px;
+    width: 102px;
   }
 
   &__receiving-value {
@@ -170,10 +174,10 @@
     width: 28px;
     display: flex;
     align-items: flex-end;
-    margin-right: 24px;
+    margin-right: 18px;
 
     @media screen and (min-width: 576px) {
-      margin-right: 48px;
+      margin-right: 36px;
     }
   }
 
@@ -225,8 +229,8 @@
       margin-top: 2px;
     }
 
-    * {
-      margin-right: 3px;
+    > div {
+      margin-left: 3px;
     }
   }
 
