--- a/ui/app/pages/swaps/select-quote-popover/index.scss
+++ b/ui/app/pages/swaps/select-quote-popover/index.scss
@@ -2,7 +2,9 @@
 
 .select-quote-popover {
   &__button {
+    border-radius: 100px;
     height: 39px;
+    width: 140px;
   }
 
   &__popover-wrap {
@@ -20,7 +22,7 @@
     }
 
     .swaps__footer {
-      padding: 16px;
+      padding: 16px 24px;
     }
   }
 
