refactor-asset-page-buttons

--- a/ui/app/components/ui/ui-components.scss
+++ b/ui/app/components/ui/ui-components.scss
@@ -16,6 +16,7 @@
 @import 'error-message/index';
 @import 'export-text-container/index';
 @import 'icon-border/icon-border';
+@import 'icon-button/icon-button';
 @import 'icon-with-fallback/icon-with-fallback';
 @import 'icon-with-label/index';
 @import 'icon/index';
