Hide input spinner on custom slippage input in slippage-buttons (#122)
* Hide input spinner on custom slippage input in slippage-buttons

* Lint

Co-authored-by: Erik Marks <rekmarks@protonmail.com>

--- a/ui/app/pages/swaps/slippage-buttons/index.scss
+++ b/ui/app/pages/swaps/slippage-buttons/index.scss
@@ -114,6 +114,10 @@
       margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
     }
 
+    input[type=number] {
+      -moz-appearance: textfield;
+    }
+
     &--danger {
       input {
         background: $Red-500;
