fix wallet-overview fixed height

--- a/ui/app/components/app/wallet-overview/index.scss
+++ b/ui/app/components/app/wallet-overview/index.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   flex: 1;
-  height: 209px;
+  min-height: 209px;
   min-width: 0;
   padding-top: 10px;
   flex-direction: column;
