Add max-width to tx list primaryCurrency

--- a/ui/app/components/app/transaction-list-item/index.scss
+++ b/ui/app/components/app/transaction-list-item/index.scss
@@ -3,6 +3,7 @@
     color: $Black-100;
     overflow: hidden;
     text-overflow: ellipsis;
+    max-width: 100px;
   }
 
   &__secondary-currency {
