Set max-width only on max width viewport

--- a/ui/app/components/app/transaction-list-item/index.scss
+++ b/ui/app/components/app/transaction-list-item/index.scss
@@ -3,7 +3,9 @@
     color: $Black-100;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 100px;
+    @media screen and (max-width: 575px) {
+      max-width: 100px;
+    }
   }
 
   &__secondary-currency {
