--- a/ui/app/components/app/asset-list-item/asset-list-item.scss
+++ b/ui/app/components/app/asset-list-item/asset-list-item.scss
@@ -1,9 +1,16 @@
 .asset-list-item {
+  &__token-button {
+    font-size: unset;
+    background: unset;
+    padding-inline-start: 0;
+
+    & h2 {
+      display: inline-block;
+    }
+  }
+
   &__token-value {
     padding: 0 5px 0 0;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
   }
 
   &__chevron-right {
