--- a/ui/app/pages/swaps/fee-card/index.scss
+++ b/ui/app/pages/swaps/fee-card/index.scss
@@ -27,7 +27,7 @@
 
   &__row-header-text,
   &__row-header-text--bold {
-    margin-right: 6px;
+    margin-right: 4px;
     cursor: pointer;
   }
 
@@ -53,6 +53,29 @@
       width: 10px;
       margin-left: 4px;
       cursor: pointer;
+    }
+  }
+
+  &__info-tooltip-container {
+    height: 10px;
+    width: 10px;
+    justify-content: center;
+
+    > div {
+      height: 10px;
+      justify-content: center;
+      width: 10px;
+      margin-top: 2px;
+    }
+  }
+
+  &__info-tooltip-content-container {
+    > div {
+      margin-bottom: 8px;
+    }
+
+    > div:last-of-type {
+      margin-bottom: 0;
     }
   }
 
@@ -107,6 +130,10 @@
   &__row-header-text--bold,
   &__row-header-secondary--bold,
   &__row-header-primary--bold {
+    font-weight: bold;
+  }
+
+  &__bold {
     font-weight: bold;
   }
 }
