--- a/ui/app/pages/add-token/token-list/index.scss
+++ b/ui/app/pages/add-token/token-list/index.scss
@@ -23,7 +23,7 @@
     border: 1px solid transparent;
     position: relative;
 
-    &:hover {
+    &:hover, &:focus {
       border-color: rgba($malibu-blue, 0.5);
     }
 
