--- a/ui/app/components/ui/list-item/index.scss
+++ b/ui/app/components/ui/list-item/index.scss
@@ -44,6 +44,12 @@
     display: flex;
     align-items: center;
 
+    & button {
+      background: unset;
+      font-size: unset;
+      padding-inline-start: 0;
+    }
+
     &-wrap {
       display: inline-block;
       margin-left: 8px;
