Update fee card designs to show savings and MM fee

--- a/ui/app/pages/swaps/main-quote-summary/index.scss
+++ b/ui/app/pages/swaps/main-quote-summary/index.scss
@@ -3,7 +3,7 @@
   flex-flow: column;
   align-items: center;
   position: relative;
-  height: 196px;
+  max-height: 196px;
   width: 100%;
   color: $white;
 
