--- a/ui/app/pages/swaps/fee-card/index.scss
+++ b/ui/app/pages/swaps/fee-card/index.scss
@@ -97,6 +97,7 @@
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
     width: 100%;
+    max-width: 311px;
     padding: 16px 16px 12px 16px;
   }
 
