--- a/ui/app/components/ui/info-tooltip/index.scss
+++ b/ui/app/components/ui/info-tooltip/index.scss
@@ -1,33 +1,38 @@
 .info-tooltip {
-  img {
+  svg {
     height: 12px;
     width: 12px;
   }
 }
 
 .tippy-popper[x-placement^=top] .tippy-tooltip-info-theme [x-arrow],
-.tippy-popper[x-placement^=top] .tippy-tooltip-wideInfo-theme [x-arrow] {
+.tippy-popper[x-placement^=top] .tippy-tooltip-wideInfo-theme [x-arrow],
+.tippy-popper[x-placement^=top] .tippy-tooltip-extraWideInfo-theme [x-arrow] {
   border-top-color: $white;
 }
 
 .tippy-popper[x-placement^=right] .tippy-tooltip-info-theme [x-arrow],
-.tippy-popper[x-placement^=right] .tippy-tooltip-wideInfo-theme [x-arrow] {
+.tippy-popper[x-placement^=right] .tippy-tooltip-wideInfo-theme [x-arrow],
+.tippy-popper[x-placement^=right] .tippy-tooltip-extraWideInfo-theme [x-arrow] {
   border-right-color: $white;
 }
 
 .tippy-popper[x-placement^=left] .tippy-tooltip-info-theme [x-arrow],
-.tippy-popper[x-placement^=left] .tippy-tooltip-wideInfo-theme [x-arrow] {
+.tippy-popper[x-placement^=left] .tippy-tooltip-wideInfo-theme [x-arrow],
+.tippy-popper[x-placement^=left] .tippy-tooltip-extraWideInfo-theme [x-arrow] {
   border-left-color: $white;
 }
 
 .tippy-popper[x-placement^=bottom] .tippy-tooltip-info-theme [x-arrow],
-.tippy-popper[x-placement^=bottom] .tippy-tooltip-wideInfo-theme [x-arrow] {
+.tippy-popper[x-placement^=bottom] .tippy-tooltip-wideInfo-theme [x-arrow],
+.tippy-popper[x-placement^=bottom] .tippy-tooltip-extraWideInfo-theme [x-arrow] {
   border-bottom-color: $white;
 }
 
 .tippy-tooltip {
   &#{&}-info-theme,
-  &#{&}-wideInfo-theme {
+  &#{&}-wideInfo-theme,
+  &#{&}-extraWideInfo-theme {
     background: white;
     color: black;
     box-shadow: 0 0 14px rgba(0, 0, 0, 0.18);
@@ -46,5 +51,9 @@
 
   &#{&}-wideInfo-theme {
     max-width: 260px;
+  }
+
+  &#{&}-extraWideInfo-theme {
+    max-width: 327px;
   }
 }
