Move settings menu items to the left alignment

--- a/ui/app/components/app/tab-bar/index.scss
+++ b/ui/app/components/app/tab-bar/index.scss
@@ -17,6 +17,7 @@
     opacity: 0.5;
     transition: opacity 200ms ease-in-out;
     background-color: unset;
+    text-align: start;
 
     @media screen and (min-width: 576px) {
       &:hover {
