Improve vertical spacing on view-quote screen and with new main-quote-view designs

--- a/ui/app/pages/swaps/main-quote-summary/index.scss
+++ b/ui/app/pages/swaps/main-quote-summary/index.scss
@@ -121,8 +121,7 @@
     justify-content: center;
     align-items: center;
     width: 287px;
-    border-top: 1px solid rgba(255, 255, 255, 0.2);
-    height: 42px;
+    margin-top: 18px;
   }
 
   &__exchange-rate-display {
