--- a/ui/app/pages/swaps/fee-card/index.scss
+++ b/ui/app/pages/swaps/fee-card/index.scss
@@ -228,6 +228,11 @@
   &__bold {
     font-weight: bold;
   }
+
+  &__tilde {
+    font-family: Roboto, Helvetica, Arial, sans-serif;
+    margin-right: -3.5px;
+  }
 }
 
 .info-tooltip {
