--- a/ui/app/components/app/home-notification/index.scss
+++ b/ui/app/components/app/home-notification/index.scss
@@ -51,7 +51,7 @@
   }
 
   & &__ignore-button {
-    border: 1px solid #6a737d;
+    border-color: #6a737d;
     box-sizing: border-box;
     border-radius: 6px;
     color: $white;
@@ -75,7 +75,7 @@
   }
 
   & &__accept-button {
-    border: 1px solid #6a737d;
+    border-color: #6a737d;
     box-sizing: border-box;
     border-radius: 6px;
     color: $white;
