--- a/ui/app/components/app/asset-list-item/asset-list-item.scss
+++ b/ui/app/components/app/asset-list-item/asset-list-item.scss
@@ -1,16 +1,25 @@
 .asset-list-item {
-  &__token-button {
-    font-size: unset;
-    background: unset;
-    padding-inline-start: 0;
 
-    & h2 {
-      display: inline-block;
-    }
+  & .list-item__heading {
+    max-width: 100%;
   }
 
-  &__token-value {
-    padding: 0 5px 0 0;
+  &__token-button {
+    padding-inline-start: 0;
+    min-width: 0;
+    min-height: 0;
+    text-align: start;
+
+    & h2 {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      max-width: 100%;
+    }
+
+    & span {
+      padding-right: 5px;
+    }
   }
 
   &__chevron-right {
