Move add contact button in fullscreen/expanded view.
Fixes #9868

Move the add contact button that is overlapping (x)/close setting icon lower, on the same line as Contacts in fullscreen/expanded view.

--- a/ui/app/pages/settings/contact-list-tab/index.scss
+++ b/ui/app/pages/settings/contact-list-tab/index.scss
@@ -220,8 +220,13 @@
 
 .address-book-add-button {
   &__button {
+
+    @media screen and (max-width: 576px) {
+      top: 10px;
+    }
+
     position: absolute;
-    top: 10px;
+    top: 80px;
     right: 16px;
     height: 56px;
     width: 56px;
