Provide a mobile popover message to advertise mobile app

--- a/ui/app/pages/pages.scss
+++ b/ui/app/pages/pages.scss
@@ -13,6 +13,7 @@
 @import 'first-time-flow/index';
 @import 'home/index';
 @import 'keychains/index';
+@import 'mobile-sync/index';
 @import 'permissions-connect/index';
 @import 'send/send';
 @import 'settings/index';
