Use Branch link, use image for QR

--- a/ui/app/pages/mobile-sync/index.scss
+++ b/ui/app/pages/mobile-sync/index.scss
@@ -12,20 +12,13 @@
     margin: 120px 0 0 0;
   }
 
-  .qr-code__wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    table {
-      /* Overrides style directly applied by QR code component */
-      margin-inline-start: 0 !important;
-    }
-  }
-
   button.fa-times {
     margin-top: -240px;
+  }
+
+  .intro-popup__content {
+    text-align: center;
+    margin-left: 0;
   }
 
   .intro-popup__button {
