--- a/ui/app/components/app/app-components.scss
+++ b/ui/app/components/app/app-components.scss
@@ -36,3 +36,4 @@
 @import 'transaction-list/index';
 @import 'transaction-status/index';
 @import 'wallet-overview/index';
+@import 'captcha/index';
