--- a/ui/app/css/itcss/components/sections.scss
+++ b/ui/app/css/itcss/components/sections.scss
@@ -420,6 +420,10 @@ textarea.twelve-word-phrase {
   text-overflow: ellipsis;
 }
 
+input.qr-ellip-address {
+  width: 100%;
+}
+
 .qr-header {
   font-size: 25px;
   margin-top: 40px;
