--- a/ui/app/css/itcss/components/modal.scss
+++ b/ui/app/css/itcss/components/modal.scss
@@ -123,7 +123,7 @@
       margin-right: 4px;
       font-size: 12px;
       padding: 8px;
-      min-width: 120px;
+      width: 120px;
       text-align: center;
     }
     .network-tag.current {
