--- a/ui/app/components/app/gas-customization/index.scss
+++ b/ui/app/components/app/gas-customization/index.scss
@@ -2,6 +2,6 @@
 
 @import './gas-modal-page-container/index';
 
-@import './gas-price-chart/index';
+// @import './gas-price-chart/index';
 
 @import './advanced-gas-inputs/index';
